# motmot

./: .buildinfo  .coveragerc  .editorconfig  .gitignore  .yapfignore  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  genindex.html  history.html  index.html  minimum-versions.txt  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  search.html  searchindex.js  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-wheels.yml  github-pages.yml  test.yml
_modules/: index.html
_modules/motmot/: _compat.html  _curvatures.html  _mesh.html  _polygon_walk.html
_modules/stl/: base.html
_sources/: history.rst.txt
_sources/stubs/: connectivity.rst.txt
_static/: more-theme.css  theme-overrides.css
docs/: autobuild  make.bat  requirements.txt
docs/source/: conf.py  index.rst  rst_prolog.txt
history/: 0.2.0.rst  0.3.0.rst  0.3.1.rst  0.3.2.rst  README.md
motmot/: __init__.py  _compat.py  _curvatures.py  _mesh.py  _misc.py  _polygon_map.py  _polygon_walk.py  _queue.h  _queue.py  _slug.py  _version.py  connectivity.py  geometry.py  hook-motmot.py  polygon_map.c  queue.c
motmot/geometry/: __init__.py  _geometry.py  _unit_vector.py  _unit_vector.pyi
stubs/: connectivity.html  geometry.html  mesh.html
tests/: README.md  __init__.py  data.py  icosasphere-1.json  icosasphere-10.json  icosasphere-15.json  test_connectivity.py  test_curvature.py  test_geometry.py  test_io.py  test_laziness.py  test_mesh.py  test_misc.py  test_queue.py
tests/PyInstaller_/: frozen-pytest.py  frozen-pytest.spec
(+7 files in other folders)
